Add centered search bar and links to image and advanced search on main search page.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="search.css">
     </head>
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div id="links">
+            <a href="image.html">Image</a>
+            <a href="advanced.html">Advanced</a>
+        </div><br>
+
+        <div id="search">
+            <form action="https://www.google.com/search">
+                <input type="text" name="q"><br><br>
+                <input type="submit" value="Google Search">
+            </form>
+        </div>        
     </body>
 </html>`
