--- a/image.html
+++ b/image.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
+        <title>Image Search</title>
+        <link rel="stylesheet" href="search.css">
     </head>
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div id="links">
+            <a href="index.html">Search</a>
+        </div>
+        
+        <div id="search">
+            <form action="https://www.google.com/search">
+                <input type="text" name="q">
+                <input type="hidden" name="udm" value="2">
+                <br><br>
+                <input type="submit" value="Google Search">
+                <!-- udm=2 needed for image search -->
+            </form>
+        </div>   
     </body>
 </html>
