--- a/image.html
+++ b/image.html
@@ -9,13 +9,13 @@
             <a href="index.html">Search</a>
         </div>
         
-        <div id="search">
+        <div class="search">
             <form action="https://www.google.com/search">
                 <input type="text" name="q">
+                <!-- udm=2 needed for image search -->
                 <input type="hidden" name="udm" value="2">
                 <br><br>
-                <input type="submit" value="Google Search">
-                <!-- udm=2 needed for image search -->
+                <input type="submit" value="Google Image Search">
             </form>
         </div>   
     </body>
