--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         <div id="links">
             <a href="image.html">Image</a>
             <a href="advanced.html">Advanced</a>
-        </div><br>
+        </div>
 
-        <div id="search">
+        <div class="search">
             <form action="https://www.google.com/search">
-                <input type="text" name="q"><br><br>
+                <input type="text" name="q">
+                <br><br>
                 <input type="submit" value="Google Search">
             </form>
         </div>        
