--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <input type="text" name="q">
                 <br><br>
                 <input type="submit" value="Google Search">
+                <input type="submit" name="btnI" value="I'm Feeling Lucky">
             </form>
         </div>        
     </body>
